cargo-features = ["strip"]

[package]
name = "hebi"
version = "0.1.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = true
codegen-units = 1

[dependencies]
rand = "0.8.4"
rand_pcg = "0.3.1"
toml = "0.5.8"
serde = { version = "1.0.130", features = ["derive"] }
typetag = "0.1.7"

[dependencies.bevy]
version = "0.5.0"
default-features = false
features = [
  "bevy_audio",
  "bevy_wgpu",
  "render",
  "mp3",
  "x11",
]